# LLM_voter_web

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh  setup.py
database_scripts/: db_content_check.py  init_db.py  megrate_db.py  populate_db.py
models/: database.py  questions.py
static/css/: styles.css
static/js/: scripts.js
templates/: no_questions.html  question_template.html
