[tool.poetry]
name = "llm-voter-web"
version = "0.1.0"
description = ""
authors = ["Alexey Gorbatovski <porsh-5@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "llm_voter_web"}]

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.5.0"
anyio = "3.7.1"
attrs = "23.1.0"
build = "0.10.0"
cachecontrol = "0.12.14"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
cleo = "2.0.1"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.7"
dulwich = "0.21.5"
fastapi = "0.101.1"
filelock = "3.12.2"
greenlet = "2.0.2"
h11 = "0.14.0"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "6.8.0"
installer = "0.7.0"
jaraco-classes = "3.3.0"
jinja2 = "3.1.2"
jsonschema = "4.19.0"
jsonschema-specifications = "2023.7.1"
keyring = "23.13.1"
lockfile = "0.12.2"
markupsafe = "2.1.3"
more-itertools = "10.1.0"
msgpack = "1.0.5"
numpy = "1.25.2"
packaging = "23.1"
pandas = "2.0.3"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "3.10.0"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.5.0"
ptyprocess = "0.7.0"
pydantic = "2.2.1"
pydantic-core = "2.6.1"
pyproject-hooks = "1.0.0"
python-dateutil = "2.8.2"
python-multipart = "0.0.6"
pytz = "2023.3"
pywin32-ctypes = "0.2.2"
rapidfuzz = "2.15.1"
referencing = "0.30.2"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rpds-py = "0.9.2"
shellingham = "1.5.3"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.20"
starlette = "0.27.0"
tomlkit = "0.12.1"
tqdm = "4.66.1"
trove-classifiers = "2023.8.7"
typing-extensions = "4.7.1"
tzdata = "2023.3"
urllib3 = "1.26.16"
uvicorn = "0.23.2"
virtualenv = "20.24.3"
webencodings = "0.5.1"
zipp = "3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
